--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,28 +5,21 @@ services:
     build: .
     ports:
       - "8080:8080"
-    environment:
-      - MAIL_PASSWORD=${MAIL_PASSWORD}
-      - SECRET_KEY=${SECRET_KEY}
-      - SQLALCHEMY_DATABASE_URI=${SQLALCHEMY_DATABASE_URI}
-      - MAIL_SERVER=${MAIL_SERVER}
-      - MAIL_PORT=587
-      - MAIL_USE_TLS=true
-      - MAIL_USERNAME=${MAIL_USERNAME}
-      - MAIL_DEFAULT_SENDER=${MAIL_DEFAULT_SENDER}
-      - PREFERRED_URL_SCHEME=https
-    depends_on:
-      - db
-    networks:
-      - backend
 
-  db:
-    image: mysql:5.7
+    volumes:
+      - .:/app
+
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-    ports:
-      - "3306:3306"
+      - FLASK_APP=run.py
+      - FLASK_ENV=production
+      - FLASK_RUN_HOST=0.0.0.0
+      - FLASK_RUN_PORT=8080
+      - DATABASE_URL=sqlite:///instance/database.db
+
+    #volumes:
+    #  - ./instance:/app/instance  # database.db sqlite
+    # depends_on:
+    #  - db
     networks:
       - backend
 
