--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ Mako==1.3.3
 MarkupSafe==2.1.5
 maxminddb==2.6.1
 multidict==6.0.5
-mysqlclient==2.2.4
+git+https://github.com/PyMySQL/mysqlclient@v2.2.7#egg=mysqlclient
 numpy==1.24.4
 pyasn==1.6.2
 pycparser==2.22
